<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.emotionalcommunication.tamarweseley.grok.SignUpHere"
    android:id="@+id/SignUpHere">

    <TextView android:text="@string/SignUpText" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailAddress"
        android:hint="@string/emailAddress"
        android:singleLine="true"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:layout_below="@+id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:hint="Name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="Username"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_alignRight="@+id/emailAddress"
        android:layout_alignEnd="@+id/emailAddress" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUpButton1"
        android:id="@+id/SignUpButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/emailAddress"
        android:layout_alignLeft="@+id/emailAddress"
        android:layout_alignStart="@+id/emailAddress"
        android:hint="Password" />

</RelativeLayout>
